--- a/linux/git/.gitconfig
+++ b/linux/git/.gitconfig
@@ -16,3 +16,5 @@
   cmd = open -W -a Meld --args --auto-merge \"$PWD/$LOCAL\" \"$PWD/$BASE\" \"$PWD/$REMOTE\" --output=\"$PWD/$MERGED\"
 [core]
 	pager = less -F -X
+[credential]
+	helper = /usr/share/doc/git/contrib/credential/libsecret/git-credential-libsecret
