gitconfig with intel stuff

--- a/linux/git/.gitconfig
+++ b/linux/git/.gitconfig
@@ -18,3 +18,11 @@
 	pager = less -F -X
 [credential]
 	helper = /usr/share/doc/git/contrib/credential/libsecret/git-credential-libsecret
+[http "https://github.com"]
+	proxy = http://proxy-us.intel.com:912
+[http "https://lfs.github.com"]
+	proxy = http://proxy-us.intel.com:912
+[http "https://github-cloud.s3.amazonaws.com"]
+	proxy = http://proxy-us.intel.com:912
+[http "https://github-cloud.githubusercontent.com"]
+	proxy = http://proxy-us.intel.com:912
